Refactor the scripts to be easier to expand. 1) support non-simpoint / simpoint workflows (run_simpoint.sh, run_no_simpoint.sh) 2) split application setups to a separated script 'setup_apps.sh' 3) change the user name to 'dcuser' instead of using 'memtrace' 4) rename all the application directory name to match to $APP_GROUPNAME 5) introduce 'apps.list' and 'params.new' files for parallel/multiple runs